# aws_strands_poc

./: README.md  pyproject.toml
src/: main.py  main_openai.py
src/aws_strands_poc/: __init__.py
src/aws_strands_poc/financial_advisor/: __init__.py  advisor.py  simple.py  simple_openai.py  test_simple.py  test_simple_openai.py
src/aws_strands_poc/financial_advisor/models/: README.md  __init__.py  openai_agent.py  openai_model.py
src/aws_strands_poc/financial_advisor/specialists/: __init__.py  compliance_officer.py  market_analyst.py  portfolio_manager.py  tax_specialist.py
src/aws_strands_poc/financial_advisor/tools/: __init__.py  portfolio_analysis.py  stock_data.py  tax_calculator.py
src/aws_strands_poc/financial_advisor/tools/memory/: __init__.py  simple_memory.py
